@@ -1,47 +1,50 @@
-# JScience HPC - Tasks & Roadmap
+---
+description: Plan de développement détaillé pour JScience Phase 5+
+---
 
-This file tracks the remaining implementation tasks from `FUTURE_ENHANCEMENTS.md` and includes new proposals for improvement.
+# 🚀 JScience - Plan de Développement Phase 5 & Optimisations
 
-## 🟢 Phase 1 & 2: Completed Features
-- [x] **GPU Acceleration Backend**: Unified interface with implementations for CUDA (Panama/JNI) and OpenCL foundations.
-- [x] **Quantum Computing Backend**: Unified interface with support for Qiskit, Strange, Braket, and Quantum4J.
-- [x] **Quantum Algorithms**: Implementation of Grover's Search and Shor's Algorithm logic.
+Ce plan consolide les actions requises pour aligner JScience sur les standards HPC (High Performance Computing) modernes, en mettant l'accent sur la performance native (SIMD, BLAS) et le vrai calcul distribué (MPI).
 
-## 🟡 Phase 3: Advanced Distributed Algorithms (Remaining)
-*Goal: Optimize distributed linear algebra for large-scale HPC clusters.*
+## ✅ 1. État des Lieux et Prérequis
 
-- [ ] **Optimize Cannon's & Fox's Algorithms**:
-    - [ ] Refactor for better cache locality (tiling optimization).
-    - [ ] Optimize handling of non-square matrices (padding strategies).
-- [x] **Implement 2.5D Matrix Multiplication**:
-    - [x] Create `Algorithm25D.java` implementing the "2.5D" strategy (reducing bandwidth by utilizing extra memory factor of √P).
-- [x] **CARMA Algorithm** (Implemented):
-    - [x] Initial recursive implementation exists (`CARMAAlgorithm.java`).
-    - [x] **Task**: Add comprehensive unit tests and compare performance vs Cannon/Fox (Benchmarking).
-- [x] **Benchmarking Suite**:
-    - [x] Create a `jscience-benchmark` module for rigorous scalability testing (Weak/Strong scaling reports).
+-   [ ] **Vérification Java Version** : Le projet doit être compilé avec Java 21+.
+-   [ ] **Flag Incubator** : Ajouter `--add-modules jdk.incubator.vector` aux configurations de build (Maven) et de run, car la Vector API est toujours en incubation en Java 21+.
 
-## 🟠 Phase 4: I/O Optimization (Implemented)
-*Goal: Handle terabyte-scale scientific datasets efficiently.*
+## ⚡ 2. Accélération SIMD (Vector API)
 
-- [x] **HDF5 Compression Support**:
-    - [x] Implement GZIP and SZIP filters in `HDF5Reader` (Found existing in `loaders`).
-    - [x] Investigate **Blosc** filter integration for high-performance numerical compression (often faster than `memcpy`).
-- [x] **Parallel HDF5 I/O**:
-    - [x] Enable concurrent read/write operations using MPI-IO concepts (`enableParallelIO` via reflection).
-- [x] **New Data Formats**:
-    - [x] **Zarr Support**: Implement reader/writer for Zarr (`loaders/ZarrReader.java`).
-    - [x] **FITS Optimization**: Add Rice/GZIP compression support for astronomy datasets (Impl in `FITSFile.java` and `FITSWriter.java`).
+*Objectif : Exploiter AVX-512 / NEON pour les boucles critiques.*
 
-## 🔵 Improvement Proposals (Partially Implemented)
-*New ideas proposed for future longevity.*
+-   [ ] **Créer `VectorSimdMatrix` (jscience-core)** :
+    -   Une implémentation de `Matrix<Real>` (ou `RealDoubleMatrix`) optimisée.
+    -   Utiliser `DoubleVector.fromArray(...)` pour charger des blocs de données.
+    -   Implémenter `add`, `sub`, `mul` (pointwise) avec les opérations vectorielles.
+-   [ ] **Intégrer dans le Planner** :
+    -   Modifier les factories de matrices pour privilégier cette implémentation si le module `jdk.incubator.vector` est disponible.
 
-- [x] **Algorithmic Intelligence**:
-    - [x] **Auto-Tuning Planner**: `MatrixMultiplicationPlanner` selects between Cannon/Fox/CARMA/2.5D at runtime.
-    - [x] **Tensor Contractions**: `Tensor.java` core implementation added.
-- [x] **Data Interoperability**:
-    - [x] **Apache Arrow**: Zero-copy export via `ArrowAdapter.java` (Direct Buffer, LE).
-    - [x] **Memory Mapping**: Off-heap memory management for >RAM datasets (`MMapMatrix.java`).
-- [x] **Verification**:
-    - [x] **Formal Methods**: (Documentation/Design) Logic verified via Unit Tests (`CARMAAlgorithmTest`).
-    - [x] **Quantum Error Correction**: Simulation environment added (`QuantumErrorCorrector.java`).
+##  3. Native BLAS Provider
+
+*Objectif : Performance maximale sur CPU via OpenBLAS / Intel MKL.*
+
+-   [x] **Créer `NativeLinearAlgebraProvider` (jscience-native)** :
+    -   Détecter la présence de bibliothèques partagées (`libopenblas.so`, `mkl_rt.dll`).
+    -   Utiliser **Project Panama (FFM API)** pour charger dynamiquement les symboles (`dgemm_`, `dgesv_`, etc.).
+    -   *Architecture* : Ne pas créer de dépendance forte. Si la lib est absente, le constructeur lève une exception (ou retourne false) et JScience continue avec ses algos Java.
+-   [x] **Benchmarking** :
+    -   Comparer `NativeLinearAlgebraProvider` vs `VectorSimdMatrix` vs `Standard Java`.
+-   [x] **Scripts de Lancement** :
+    -   Mise à jour de `start_cpu.bat` et `run_benchmarks.bat` pour injecter OpenBLAS dans le PATH.
+
+## 🌐 4. MPI Binding (Vrai Distribué)
+
+*Objectif : Passer de la simulation locale au cluster physique.*
+
+-   [ ] **Refactor `MPIDistributedContext`** :
+    -   Il existe déjà une détection MPI par réflexion dans `org.jscience.core.distributed.MPIDistributedContext`.
+    -   **Audit** : Vérifier que l'implémentation actuelle (`MpiStrategy`) est fonctionnelle et couvre les besoins des nouveaux algos (2.5D, CARMA).
+    -   Déplacer si nécessaire la logique purement native dans `jscience-native` pour isoler les dépendances JNI/MPI.
+
+## 📦 5. Packaging et CI
+
+-   [ ] **Fat Jars & Modules** : S'assurer que les connecteurs natifs (Panama) fonctionnent une fois packagés.
+-   [ ] **Documentation** : Mettre à jour le README avec les prérequis système (Installer OpenBLAS/MPI) pour activer ces fonctionnalités "Turbo".
